Revert "tool and commands upgraded based on the latest tools"
This reverts commit ccf1d6523a093bc47c096d305531f3870d324fac.

--- a/starter/Dockerfile
+++ b/starter/Dockerfile
@@ -9,11 +9,9 @@ LABEL maintainer="nick.reva@snap.com"
 #define version
 LABEL version="V1"
 
-# create a directory to work in (using mkdir -p to avoid errors)
-RUN mkdir -p /udacity
- 
-# Set the working directory for subsequent instructions
-WORKDIR /udacity
+# create a directory to work in
+RUN mkdir udacity \
+    && cd udacity
 
 #install zypper 
 RUN zypper refs && zypper refresh
